<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:text="@string/game_settings" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp"
        android:text="@string/sound_label" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignStart="@+id/seekBar"
        android:layout_alignEnd="@+id/seekBar"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp"
        android:text="Brightness"
        tools:ignore="HardcodedText" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar2"
        android:layout_alignStart="@+id/seekBar2"
        android:layout_alignEnd="@+id/seekBar2"
        android:layout_marginStart="1dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="-1dp"
        android:text="@string/difficulty_level" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollHorizontally="false"
            android:text="@string/easy"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollHorizontally="false"
            android:text="@string/medium"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hard"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="295dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="49dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start simple" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Catch" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Give  \if back to mi" />

    </LinearLayout>

</RelativeLayout>